# contract-intelligence

./: .gitignore  README.md  docker-compose.yml  generate_samples.py  start-tunnel.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: __init__.py  base.py  clause_extraction.py  ingestion.py  orchestrator.py  qa.py  risk.py  summarization.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py
backend/app/graph/: workflow.py
backend/app/models/: schemas.py
backend/app/services/: analysis.py  embeddings.py  ingestion.py  insights.py  model_gateway.py  repository.py  retrieval.py  store.py
backend/scripts/: evaluate_golden_localhost.py  evaluate_localhost_api.py  evaluate_onecle_contracts.py  evaluate_real_contracts.py
docs/: ARCHITECTURE_DIAGRAM.md  HIGH_LEVEL_DIAGRAM.md  INTERVIEW_PREP.md  PRESENTATION.md  TECHNICAL_DESIGN.md  TECHNICAL_REFERENCE.html  system_architecture.md
evalaution/: golden_queries.json  llm-as-judge-step.md
evalaution/data/onecle/: berrent-emp-2019-08-11.shtml  brown-emp-2019-01-07.shtml  index.shtml  live-oak-ppp-loan-2020-04-15.shtml  minson-emp-2019-08-12.shtml  st-eriksgatan-lease-2013-02-23.shtml  (+4 more)
evalaution/runs/: golden_eval_20260227_235539.json  golden_eval_20260228_000043.json  self_eval_20260227_234533.json  self_eval_20260227_234706.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: pdfviewer.html
sample-contracts/: acme-supplier-agreement-2023.txt
synthetic doc genration/: _gen_contracts.py
(+9 files in other folders)
